--- a/APM/APM.Admin/Web.config
+++ b/APM/APM.Admin/Web.config
@@ -90,4 +90,42 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <netTcpBinding >
+        <binding>
+          <security mode="None"></security>
+        </binding>
+      </netTcpBinding>
+    </bindings>
+    <services>
+      <service name="APM.Admin.SysNoticeService">
+        <endpoint address="" binding="netTcpBinding" contract="APM.Notice.ISysNoticeService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost/Admin/" />
+            <add baseAddress="net.tcp://localhost:42278/Admin/" />
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior>
+          <!-- 为避免泄漏元数据信息，
+          请在部署前将以下值设置为 false -->
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <!-- 要接收故障异常详细信息以进行调试，
+          请将以下值设置为 true。在部署前设置为 false 
+            以避免泄漏异常信息-->
+          <serviceDebug includeExceptionDetailInFaults="False" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
 </configuration>
