--- a/APM/APM.Web/Web.config
+++ b/APM/APM.Web/Web.config
@@ -90,4 +90,22 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding name="NetTcpBinding_ISysNoticeService">
+          <security mode="None" />
+        </binding>
+      </netTcpBinding>
+    </bindings>
+    <client>
+      <endpoint address="net.tcp://user-pc:42278/Admin/SysNoticeService.svc"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ISysNoticeService"
+          contract="APM.Notice.ISysNoticeService" name="NetTcpBinding_ISysNoticeService">
+        <identity>
+          <dns value="localhost" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
