chang to eventbus

--- a/APM/APM.Admin/Web.config
+++ b/APM/APM.Admin/Web.config
@@ -99,13 +99,13 @@
       </netTcpBinding>
     </bindings>
     <services>
-      <service name="APM.Admin.SysNoticeService">
-        <endpoint address="" binding="netTcpBinding" contract="APM.Notice.ISysNoticeService">
+      <service name="APM.Admin.EventBusService">
+        <endpoint address="" binding="netTcpBinding" contract="APM.EventBus.IEventBusService">
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost/Admin/" />
