--- a/APM/APM.Web/Web.config
+++ b/APM/APM.Web/Web.config
@@ -93,15 +93,15 @@
   <system.serviceModel>
     <bindings>
       <netTcpBinding>
-        <binding name="NetTcpBinding_ISysNoticeService">
+        <binding name="NetTcpBinding_IEventBusService">
           <security mode="None" />
         </binding>
       </netTcpBinding>
     </bindings>
     <client>
-      <endpoint address="net.tcp://user-pc:42278/Admin/SysNoticeService.svc"
-          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ISysNoticeService"
-          contract="APM.Notice.ISysNoticeService" name="NetTcpBinding_ISysNoticeService">
+      <endpoint address="net.tcp://user-pc:42278/Admin/EventBusService.svc"
+          binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEventBusService"
+          contract="APM.EventBus.IEventBusService" name="NetTcpBinding_IEventBusService">
         <identity>
           <dns value="localhost" />
         </identity>
