--- a/APM/APM.Admin/APM.Admin.csproj
+++ b/APM/APM.Admin/APM.Admin.csproj
@@ -192,8 +192,8 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="SysNoticeService.svc.cs">
-      <DependentUpon>SysNoticeService.svc</DependentUpon>
+    <Compile Include="EventBusService.svc.cs">
+      <DependentUpon>EventBusService.svc</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -217,7 +217,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="SysNoticeService.svc" />
+    <Content Include="EventBusService.svc" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
