--- a/APM/APM.Web1/Web.config
+++ b/APM/APM.Web1/Web.config
@@ -8,6 +8,43 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel.MessageLogging" switchValue="Warning,ActivityTracing">
+        <listeners>
+          <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+            <filter type="" />
+          </add>
+          <add name="ServiceModelMessageLoggingListener">
+            <filter type="" />
+          </add>
+        </listeners>
+      </source>
+      <source propagateActivity="true" name="System.ServiceModel" switchValue="Warning,ActivityTracing">
+        <listeners>
+          <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+            <filter type="" />
+          </add>
+          <add name="ServiceModelTraceListener">
+            <filter type="" />
+          </add>
+        </listeners>
+      </source>
+    </sources>
+    <sharedListeners>
+      <add initializeData="d:\zhhcode\apm\apm\apm.web1\web_messages.svclog"
+        type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+        name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
+        <filter type="" />
+      </add>
+      <add initializeData="d:\zhhcode\apm\apm\apm.web1\web_tracelog.svclog"
+        type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+        name="ServiceModelTraceListener" traceOutputOptions="Timestamp">
+        <filter type="" />
+      </add>
+    </sharedListeners>
+    <trace autoflush="true" />
+  </system.diagnostics>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-APM.Web1-20160708105230.mdf;Initial Catalog=aspnet-APM.Web1-20160708105230;Integrated Security=True"
       providerName="System.Data.SqlClient" />
@@ -91,6 +128,9 @@
     </compilers>
   </system.codedom>
   <system.serviceModel>
+    <diagnostics>
+      <messageLogging logMalformedMessages="true" logMessagesAtTransportLevel="true" />
+    </diagnostics>
     <bindings>
       <netTcpBinding>
         <binding name="NetTcpBinding_IEventBusService">
