--- a/APM/APM.Web/Web.config
+++ b/APM/APM.Web/Web.config
@@ -32,12 +32,12 @@
       </source>
     </sources>
     <sharedListeners>
-      <add initializeData="d:\zhhcode\apm\apm\apm.web\web_messages.svclog"
+      <add initializeData="web_messages.svclog"
         type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
         name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
         <filter type="" />
       </add>
-      <add initializeData="d:\zhhcode\apm\apm\apm.web\web_tracelog.svclog"
+      <add initializeData="web_tracelog.svclog"
         type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
         name="ServiceModelTraceListener" traceOutputOptions="Timestamp">
         <filter type="" />
