--- a/APM/APM/APM.csproj
+++ b/APM/APM/APM.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventBus\EventClientInfo.cs" />
     <Compile Include="EventBus\EventService.cs" />
     <Compile Include="EventBus\EventBusClient.cs" />
     <Compile Include="EventBus\IDistributedEvent.cs" />
